[gd_scene load_steps=2 format=3 uid="uid://brkk2air3c0ef"]

[ext_resource type="Script" path="res://Assets/Scripts/LoadingScreen.gd" id="1_onsnw"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onsnw")

[node name="MinLoadingTime" type="Timer" parent="."]
wait_time = 3.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.486275, 0.278431, 1)

[connection signal="timeout" from="MinLoadingTime" to="." method="EndLoadingScreen"]
